--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@master
 
       - name: Security vulnerabilities scan
-        uses: DiasALianZ/ChatbotYan/.github/workflows@master
+        uses: aufdenpunkt/python-safety-check@master
